network-policy/pod-busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    app: sleepy
    access: "true"
spec:
  containers:
  - name: busybox
    image: busybox:latest
    command: ["sh", "-c", "sleep 3600"]
